# error

./: .gitignore  CMakeLists.txt  README.md
include/meanbot/: error.hpp  error_category.hpp  error_types.hpp  error_version.hpp
include/meanbot/error/: category.hpp  code.hpp  type.hpp  version.hpp
src/: category.cpp  precomp.cpp  precomp.hpp
tests/error_fuzz_tests/: CMakeLists.txt  error_fuzz_tests.cpp
tests/error_perf_tests/: CMakeLists.txt  error_perf_tests.cpp
tests/error_tests/: CMakeLists.txt  error_tests.cpp
tests/error_unit_tests/: CMakeLists.txt  error_unit_tests.cpp
